--- a/src/sil/org/syllableparser/view/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/RootLayout.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.RootLayoutController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" stylesheets="@SyllableParser.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.RootLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -36,4 +37,25 @@
         </menus>
       </MenuBar>
    </top>
+   <left>
+      <SplitPane dividerPositions="0.6777003484320557" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <Label text="%cv.view.segmentinventory" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="183.0" prefWidth="158.0">
+               <children>
+                <Button fx:id="buttonCVApproach" alignment="CENTER" layoutX="-13.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleCVApproach" onMouseClicked="#handleCVApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.cv" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Button fx:id="buttonSonorityHierarchyApproach" alignment="CENTER" contentDisplay="CENTER" layoutX="28.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleSonorityHierarchyApproach" onMouseClicked="#handleSonorityHierarchyApproach" prefHeight="30.0" styleClass="button-blue" text="%apporach.sonorityhierarchy" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
+                  <Button fx:id="buttonONCApproach" alignment="CENTER" mnemonicParsing="false" onAction="#handleONCApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.onc" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
+                  <Button fx:id="buttonMoraicApproach" alignment="CENTER" mnemonicParsing="false" onAction="#handleMoraicApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.moraic" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0" />
+                  <Button fx:id="buttonNuclearProjectionApproach" alignment="CENTER" mnemonicParsing="false" onAction="#handleNuclearProjectionApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.nuclearprojection" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0" />
+                  <Button fx:id="buttonOTApproach" alignment="CENTER" mnemonicParsing="false" onAction="#handleOTApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.ot" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="150.0" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </left>
 </BorderPane>
