--- a/src/sil/org/syllableparser/view/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/RootLayout.fxml
@@ -25,6 +25,11 @@
               <MenuItem mnemonicParsing="false" text="%menu.remove" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="%menu.insert">
+              <items>
+                <MenuItem mnemonicParsing="false" text="%menu.insertnew" />
+              </items>
+            </Menu>
             <Menu mnemonicParsing="false" text="%menu.view">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#handleChangeInterfaceLanguage" text="%menu.changeinterfacelanguage" />
