--- a/src/sil/org/syllableparser/view/fxml/CVSegmentInventory.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVSegmentInventory.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.CVSegmentInventoryController">
    <children>
@@ -16,7 +16,7 @@
                     <columns>
                       <TableColumn fx:id="segmentColumn" prefWidth="63.0" text="%label.segment" />
                       <TableColumn fx:id="graphemesColumn" prefWidth="119.0" text="%label.orthographicforms" />
-                        <TableColumn fx:id="commentColumn" prefWidth="-1.0" text="%label.comment" />
+                        <TableColumn fx:id="descriptionColumn" prefWidth="-1.0" text="%label.description" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -27,7 +27,7 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="383.0">
                <children>
                   <Label layoutX="1.0" layoutY="7.0" text="%label.segmentinventory" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
-                  <GridPane layoutX="78.0" layoutY="183.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0">
+                  <GridPane layoutX="5.0" layoutY="35.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="70.0" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="276.0" minWidth="10.0" prefWidth="276.0" />
@@ -39,11 +39,11 @@
                     </rowConstraints>
                      <children>
                         <Label text="%label.segment" />
-                        <Label text="%label.orthographicforms" GridPane.rowIndex="1" />
-                        <Label text="%label.comment" GridPane.rowIndex="2" />
+                        <Label text="%label.description" GridPane.rowIndex="1" />
+                        <Label text="%label.orthographicforms" GridPane.rowIndex="2" />
                         <TextField fx:id="segmentField" GridPane.columnIndex="1" />
-                        <TextField fx:id="graphemesField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="commentField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="graphemesField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
                </children>
