--- a/src/sil/org/syllableparser/view/fxml/CVNaturalClasses.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVNaturalClasses.fxml
@@ -43,11 +43,11 @@
                         <Label text="%label.name" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
                         <Label text="%label.segmentornaturalclass" GridPane.rowIndex="2" />
-                        <Label text="Label" GridPane.rowIndex="3" />
+<!--                         <Label text="Label" GridPane.rowIndex="3" /> -->
                         <TextField fx:id="nameField" GridPane.columnIndex="1" />
                         <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <FlowPane hgap="4.0" prefHeight="200.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+<!--                         <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
+                        <FlowPane hgap="4.0" prefHeight="200.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <children>
                               <TextFlow fx:id="sncTextFlow" prefHeight="22.0" prefWidth="234.0" />
                               <Button fx:id="sncButton" mnemonicParsing="false" onAction="#handleLaunchSNCChooser" text="...">
