--- a/src/sil/org/syllableparser/view/fxml/CVSyllablePatterns.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVSyllablePatterns.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.CVNaturalClassesController">
+<StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.CVSyllablePatternsController">
    <children>
       <SplitPane dividerPositions="0.4373040752351097" prefHeight="160.0" prefWidth="200.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="cvNaturalClassTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="cvSyllablePatternTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
-                      <TableColumn fx:id="segmentOrNaturalClassColumn" prefWidth="119.0" text="%label.segmentornaturalclass" />
+                      <TableColumn fx:id="naturalClassColumn" prefWidth="119.0" text="%label.naturalclasses" />
                         <TableColumn fx:id="descriptionColumn" prefWidth="-1.0" text="%label.description" />
                     </columns>
                      <columnResizePolicy>
@@ -27,7 +27,7 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="383.0">
                <children>
-                  <Label layoutX="1.0" layoutY="7.0" text="%label.naturalclasses" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                  <Label layoutX="1.0" layoutY="7.0" text="%label.syllablepatterns" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
                   <GridPane layoutX="5.0" layoutY="35.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="70.0" />
@@ -42,18 +42,18 @@
                      <children>
                         <Label text="%label.name" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
-                        <Label text="%label.segmentornaturalclass" GridPane.rowIndex="2" />
+                        <Label text="%label.naturalclasses" GridPane.rowIndex="2" />
 <!--                         <Label text="Label" GridPane.rowIndex="3" /> -->
                         <TextField fx:id="nameField" GridPane.columnIndex="1" />
                         <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 <!--                         <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
                         <FlowPane hgap="4.0" prefHeight="200.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <children>
-                              <TextFlow fx:id="sncTextFlow" prefHeight="22.0" prefWidth="234.0">
+                              <TextFlow fx:id="ncsTextFlow" prefHeight="22.0" prefWidth="234.0">
                                  <padding>
                                     <Insets top="7.5" />
                                  </padding></TextFlow>
-                              <Button fx:id="sncButton" mnemonicParsing="false" onAction="#handleLaunchSNCChooser" text="...">
+                              <Button fx:id="ncsButton" mnemonicParsing="false" onAction="#handleLaunchNCChooser" text="...">
                                  <FlowPane.margin>
                                     <Insets left="3.0" />
                                  </FlowPane.margin></Button>
