--- a/src/sil/org/syllableparser/view/fxml/SyllableParser.css
+++ b/src/sil/org/syllableparser/view/fxml/SyllableParser.css
@@ -3,8 +3,11 @@
 .button-blue {
 	-fx-background-color: #BFD0FF;
 	-fx-border-style: solid ;
-	
 }
 .button-selected {
 	-fx-background-color: #F5DEB3;
+}
+
+.toolbarbutton {
+    -fx-background-color: transparent, transparent, transparent, transparent;
 }
