Add Word super class for commonn word items

--- a/src/sil/org/syllableparser/view/fxml/SyllableParser.css
+++ b/src/sil/org/syllableparser/view/fxml/SyllableParser.css
@@ -11,3 +11,7 @@
 .toolbarbutton {
     -fx-background-color: transparent, transparent, transparent, transparent;
 }
+
+.failedsyllabification {
+	-fx-color:red;
+}
