--- a/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
@@ -50,16 +50,18 @@
       </MenuBar>
       <ToolBar prefHeight="25.0" prefWidth="800.0" styleClass="toolbarbutton" BorderPane.alignment="CENTER">
         <items>
-               <Button fx:id="buttonToolbarFileNew" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="23.0" prefWidth="17.0" styleClass="toolbarbutton" text="" />
-               <Button fx:id="buttonToolbarFileOpen" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleOpen" prefHeight="23.0" prefWidth="17.0" styleClass="toolbarbutton" text="" />
-               <Button fx:id="buttonToolbarFileSave" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="23.0" prefWidth="17.0" styleClass="toolbarbutton" text="" />
+               <Button fx:id="buttonToolbarFileNew" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="23.0" prefWidth="17.0" text="" />
+               <Button fx:id="buttonToolbarFileOpen" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleOpen" prefHeight="23.0" prefWidth="17.0" text="" />
+               <Button fx:id="buttonToolbarFileSave" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="23.0" prefWidth="17.0" text="" />
                <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="3.0" />
-               <Button fx:id="buttonToolbarEditCut" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleCut" prefHeight="23.0" prefWidth="17.0" styleClass="toolbarbutton" text="" />
-               <Button fx:id="buttonToolbarEditCopy" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleCopy" prefHeight="23.0" prefWidth="17.0" styleClass="toolbarbutton" text="" />
-               <Button fx:id="buttonToolbarEditPaste" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handlePaste" prefHeight="23.0" prefWidth="17.0" styleClass="toolbarbutton" text="" />
-               <Button fx:id="buttonToolbarEditRemove" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleRemoveItem" prefHeight="23.0" prefWidth="17.0" styleClass="toolbarbutton" text="" />
+               <Button fx:id="buttonToolbarEditCut" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleCut" prefHeight="23.0" prefWidth="17.0" text="" />
+               <Button fx:id="buttonToolbarEditCopy" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleCopy" prefHeight="23.0" prefWidth="17.0" text="" />
+               <Button fx:id="buttonToolbarEditPaste" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handlePaste" prefHeight="23.0" prefWidth="17.0" text="" />
                <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="3.0" />
-               <Button fx:id="buttonToolbarSyllabify" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleSyllabifyWords" prefHeight="23.0" prefWidth="17.0" styleClass="toolbarbutton" text="" />
+               <Button fx:id="buttonToolbarEditInsert" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleInsertNewItem" prefHeight="23.0" prefWidth="17.0" text="" />
+               <Button fx:id="buttonToolbarEditRemove" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleRemoveItem" prefHeight="23.0" prefWidth="17.0" text="" />
+               <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="3.0" />
+               <Button fx:id="buttonToolbarSyllabify" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleSyllabifyWords" prefHeight="23.0" prefWidth="17.0" text="" />
         </items>
       </ToolBar>
       </VBox>
