--- a/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
@@ -52,6 +52,7 @@
             </Menu>
             <Menu mnemonicParsing="false" text="%menu.help">
                <items>
+                  <MenuItem mnemonicParsing="false" onAction="#handleHelpIntro" text="%menu.helpintro" />
                   <MenuItem mnemonicParsing="false" onAction="#handleAbout" text="%menu.about" />
                </items>
             </Menu>
@@ -86,7 +87,7 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="183.0" prefWidth="158.0">
                <children>
                 <Button fx:id="buttonCVApproach" alignment="CENTER" layoutX="-13.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleCVApproach" onMouseClicked="#handleCVApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.cv" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Button fx:id="buttonSonorityHierarchyApproach" alignment="CENTER" contentDisplay="CENTER" layoutX="28.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleSonorityHierarchyApproach" onMouseClicked="#handleSonorityHierarchyApproach" prefHeight="30.0" styleClass="button-blue" text="%apporach.sonorityhierarchy" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
+                  <Button fx:id="buttonSonorityHierarchyApproach" alignment="CENTER" contentDisplay="CENTER" layoutX="28.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleSonorityHierarchyApproach" onMouseClicked="#handleSonorityHierarchyApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.sonorityhierarchy" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
                   <Button fx:id="buttonONCApproach" alignment="CENTER" mnemonicParsing="false" onAction="#handleONCApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.onc" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
                   <Button fx:id="buttonMoraicApproach" alignment="CENTER" mnemonicParsing="false" onAction="#handleMoraicApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.moraic" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0" />
                   <Button fx:id="buttonNuclearProjectionApproach" alignment="CENTER" mnemonicParsing="false" onAction="#handleNuclearProjectionApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.nuclearprojection" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0" />
