Use list instead of individual combo boxes in cv syllable pattern chooser

--- a/src/sil/org/syllableparser/view/fxml/CVSyllablePatternNaturalClassChooser.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVSyllablePatternNaturalClassChooser.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import java.util.ArrayList?>
 
 <AnchorPane prefHeight="303.0" prefWidth="625.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.CVSyllablePatternNaturalClassChooserController">
    <children>
