--- a/src/sil/org/syllableparser/view/fxml/SyllableParser.css
+++ b/src/sil/org/syllableparser/view/fxml/SyllableParser.css
@@ -15,3 +15,9 @@
 .failedsyllabification {
 	-fx-color:red;
 }
+/* .combo-box-popup .list-cell:disabled  {
+    -fx-opacity: 0.4 ;
+}
+.combo-box-popup .list-cell  {
+    -fx-opacity: 1.0 ;
+} */
