--- a/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
@@ -11,8 +11,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.layout.VBox?>
+<?import org.controlsfx.control.StatusBar?>
 
-<BorderPane prefHeight="600.0" prefWidth="1000.0" stylesheets="@SyllableParser.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.RootLayoutController">
+<BorderPane prefHeight="660.0" prefWidth="1000.0" stylesheets="@SyllableParser.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.RootLayoutController">
    <top>
    <VBox>
       <MenuBar BorderPane.alignment="CENTER">
@@ -84,7 +86,7 @@
                   <ListView fx:id="approachViews" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="183.0" prefWidth="158.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="190.0" prefWidth="158.0">
                <children>
                 <Button fx:id="buttonCVApproach" alignment="CENTER" layoutX="-13.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleCVApproach" onMouseClicked="#handleCVApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.cv" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <Button fx:id="buttonSonorityHierarchyApproach" alignment="CENTER" contentDisplay="CENTER" layoutX="28.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleSonorityHierarchyApproach" onMouseClicked="#handleSonorityHierarchyApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.sonorityhierarchy" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
@@ -100,4 +102,10 @@
    <center>
       <StackPane fx:id="approachViewContent" BorderPane.alignment="CENTER" />
    </center>
+   <bottom>
+   <VBox>
+   <StatusBar prefHeight="25.0" prefWidth="800.0" styleClass="toolbarbutton" BorderPane.alignment="CENTER" fx:id="statusBar">
+   </StatusBar>
+   </VBox>
+   </bottom>
 </BorderPane>
