--- a/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
@@ -46,6 +46,7 @@
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#handleSyllabifyWords" text="%menu.syllabifywords" fx:id="menuItemSyllabify" />
                 <MenuItem mnemonicParsing="false" onAction="#handleConvertPredictedToCorrectSyllabification" text="%menu.convertpredictedtocorrect" fx:id="menuItemConvertPredictedToCorrectSyllabification" />
+                <MenuItem mnemonicParsing="false" onAction="#handleFindWord" text="%menu.findword" fx:id="menuItemFindWord" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="%menu.view">
@@ -76,6 +77,7 @@
                <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="3.0" />
                <Button fx:id="buttonToolbarSyllabify" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleSyllabifyWords" prefHeight="23.0" prefWidth="17.0" text="" />
                <Button fx:id="buttonToolbarConvertPredictedToCorrectSyllabification" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleConvertPredictedToCorrectSyllabification" prefHeight="23.0" prefWidth="17.0" text="" />
+               <Button fx:id="buttonToolbarFindWord" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" minWidth="17.0" mnemonicParsing="false" onAction="#handleFindWord" prefHeight="23.0" prefWidth="17.0" text="" />
         </items>
       </ToolBar>
       </VBox>
