--- a/src/sil/org/syllableparser/view/fxml/SyllableParser.css
+++ b/src/sil/org/syllableparser/view/fxml/SyllableParser.css
@@ -1,5 +1,8 @@
 /* custom CSS for SYllable Parser */
 
+.root {
+	-fx-font-size:100%;
+}
 .button-blue {
 	-fx-background-color: #BFD0FF;
 	-fx-border-style: solid ;
