Add color for CV word syllabification success or failure.

--- a/src/sil/org/syllableparser/view/fxml/SyllableParser.css
+++ b/src/sil/org/syllableparser/view/fxml/SyllableParser.css
@@ -25,7 +25,10 @@
 }
 
 .failedsyllabification {
-	-fx-text-fill:red;
+	-fx-background-color:red;
+}
+.successfullsyllabification {
+	-fx-background-color:white;
 }
 .syllabification-result {
 	-fx-font-size: 90%;
