--- a/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
@@ -110,7 +110,7 @@
                   <ListView fx:id="approachViews" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="190.0" prefWidth="158.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="190.0" prefWidth="158.0" SplitPane.resizableWithParent="false" >
                <children>
                 <Button fx:id="buttonCVApproach" alignment="CENTER" layoutX="-13.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleCVApproach" onMouseClicked="#handleCVApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.cv" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <Button fx:id="buttonSonorityHierarchyApproach" alignment="CENTER" contentDisplay="CENTER" layoutX="28.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleSonorityHierarchyApproach" onMouseClicked="#handleSonorityHierarchyApproach" prefHeight="30.0" styleClass="button-blue" text="%approach.sonorityhierarchy" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
